# the-book-report

./: LICENSE  README.md
.cursor/commands/: commit.md
.cursor/rules/: rules.mdc
books/Agentic Design Patterns/: README.md
books/Agentic Design Patterns/code-examples/1-prompt-chaining/: .env.template  conftest.py  main.py  pyproject.toml  test_main.py
books/Agentic Design Patterns/docs/: testing.md
books/Agentic Design Patterns/reading-notes-and-quotes/: 0-power-and-responsibility.md  1-prompt-chaining.md
