[project]
name = "1-prompt-chaining"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[tool.uv]
python-preference = "only-managed"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
force-single-line = false
force-wrap-aliases = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
